# millesima_projetS6

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  scraper.py  test.json  test_main.py
.github/workflows/: python-app.yml
docs/: cleaning.md  index.md  scraper.md  scraperdata.md
scraper/: index.html
scraperdata/: index.html
search/: search_index.json
src/: cleaning.py  main.py  scraper.py
tests/: test_cleaning.py  test_scraper.py
